k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sagan-app
---
# Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: sagan-app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        app.kubernetes.io/name: backend
    spec:
      serviceAccountName: sagan-backend-ksa
      nodeSelector:
        cloud.google.com/gke-nodepool: "spot-shared-pool"
        iam.gke.io/gke-metadata-server-enabled: "true"
      tolerations: 
      - key: "dedicated"
        operator: "Equal"
        value: "spot"
        effect: "NoSchedule"
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000   
      containers:
      - name: backend
        image: sagan-backend # skaffold replaces this
        command: ["/app/.venv/bin/python", "-m", "uvicorn", "main:app",
          "--host", "0.0.0.0", "--port", "8000"]
        resources:
          requests:
            memory: "2Gi"
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "1000m"
        volumeMounts:
        - mountPath: "/app/db"
          name: sagan-pvc
          subPath: db_dir
        - mountPath: "/app/data" 
          name: sagan-pvc
          subPath: data_dir
      volumes:
      - name: sagan-pvc
        persistentVolumeClaim:
          claimName: sagan-pvc
---
# Backend Service
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: sagan-app
spec:
  selector:
    app: backend
  ports:
    - port: 8000
      targetPort: 8000
---
# Frontend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: sagan-app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        app.kubernetes.io/name: frontend
    spec:
      serviceAccountName: sagan-frontend-ksa
      nodeSelector:
        cloud.google.com/gke-nodepool: "dedicated-pool"
      containers:
      - name: frontend
        image: sagan-frontend # skaffold replaces this
        workingDir: /app
        command: ["/app/.venv/bin/streamlit"]
        args: [
          "run", "main.py", 
          "--server.address", "0.0.0.0",
          "--server.port", "8501",
          "--server.enableCORS", "false",          
          "--server.enableXsrfProtection", "false",
          "--browser.serverAddress", "app.wylderhayes.com",
          "--browser.serverPort", "443"
        ]
        resources:
          requests:
            memory: "2Gi"
            cpu: "500m"
          limits:
            memory: "3Gi"
            cpu: "1000m"
---
# Frontend Service (GKE External Load Balancer)
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: sagan-app
spec:
  type: LoadBalancer # used with public static ip
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 8501
