k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sagan-gateway
  namespace: sagan-app
  annotations:
    networking.gke.io/certmap: sagan-cert-map
    networking.gke.io/static-ip: sagan-ingress-ip
spec:
  gatewayClassName: gke-l7-global-external-managed
  addresses:
  - type: NamedAddress
    value: sagan-ingress-ip
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
  - name: https
    protocol: HTTPS
    port: 443
    hostname: "app.wylderhayes.com"
    tls:
      mode: Terminate
      certificateRefs:
      - name: sagan-cert-map
    allowedRoutes:
      namespaces:
        from: Same
